# bevy_sequence

./: .rustfmt.toml  Cargo.toml
benches/: bench.rs
examples/: hooks.rs  immediate.rs  persistent.rs  random_distribution.rs  select.rs
src/: app.rs  evaluate.rs  fragment.rs  fragment2.rs  lib.rs
src/combinators/: always.rs  choice.rs  delay.rs  distribution.rs  evaluated.rs  hooks.rs  limit.rs  mod.rs  or.rs  save.rs  select.rs  sequence.rs
src/fragment/: all.rs  children.rs  delay.rs  dynamic.rs  eval.rs  event.rs  hooks.rs  leaf.rs  limit.rs  mapped.rs  mod.rs  sequence.rs
