[package]
name = "bevy_sequence"
version = "0.1.0"
edition = "2021"

[features]
default = ["reflect", "serde"]
reflect = ["dep:bevy_reflect"]
serde = ["dep:serde"]

[dependencies]
bevy_ecs = "0.15"
bevy_app = "0.15"
bevy_utils = "0.15"
bevy_log = "0.15"
bevy_time = "0.15"
bevy_hierarchy = "0.15"
bevy_reflect = { version = "0.15", optional = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = [
  "bevy_debug_stepping",
  "bevy_asset",
  "bevy_audio",
  "bevy_color",
  "bevy_state",
  "multi_threaded",
  "sysinfo_plugin",
] }
criterion = { version = "0.5" }
serde_json = "1.0"

[[bench]]
name = "bench"
harness = false
