[package]
name = "bevy_sequence"
version = "0.1.0"
edition = "2024"

[features]
default = ["reflect", "serde"]
reflect = ["dep:bevy_reflect"]
serde = ["dep:serde"]

[dependencies]
bevy_ecs = "0.16"
bevy_app = "0.16"
bevy_utils = "0.16"
bevy_platform = "0.16"
bevy_log = "0.16"
bevy_time = "0.16"
bevy_reflect = { version = "0.16", optional = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
variadics_please = "1.1.0"

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "bevy_debug_stepping",
    "bevy_asset",
    "bevy_color",
    "bevy_state",
    "multi_threaded",
    "sysinfo_plugin",
] }
criterion = { version = "0.5" }
serde_json = "1.0"

[[bench]]
name = "bench"
harness = false
